  ezcPersistentSessionIdentityDecorator now provide the method isRelated() to
  check if 2 objects are related to each other.
- Implemented enhancement #14154: Property converters are now also called for
  null values.
- Implemented enhancement #14158: If an object to be loaded is not found, an
  ezcPersistentObjectNotFoundException is thrown.


1.6 - Monday 29 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed message in testcase.


1.6rc1 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.6beta1 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Note: This release changes the indexing of arrays returns by
  ezcPersistentSession and its decorators. These arrays are now indexed by
  object IDs.


1.6alpha2 - Tuesday 26 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Renamed ezcPersistentIdentitySession to
  ezcPersistentSessionIdentityDecorator.
- Introduced new ezcPersistentSessionFoundation interface, for
  ezcPersistentSession and its decorators.
- Finalized implementation of identity management and relation pre-fetching.


1.6alpha1 - Tuesday 21 April 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Started implementation of #12473: PersistentObject now supports basic
  identity management.


1.5.2 - Monday 11 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14736: ezcPersistentSession->createRelationFindQuery() now
  supports relation names.
- Fixed issue #14863: ezcPersistentSessionInstance::reset() is now static and
  does work correctly.
- Fixed issue #14690: Extracted duplicated code into methods and avoided to
  instantiate a new generator object for each save/update (based on a patch by
  Benjamin Eberlei).


1.5.1 - Monday 30 March 2009