@@ -18,6 +18,8 @@ require_once dirname( __FILE__ ) . '/../data/relation_test_person.php';
 require_once dirname( __FILE__ ) . '/../data/relation_test_birthday.php';
 require_once dirname( __FILE__ ) . '/../data/relation_test_employer.php';
 
+require_once dirname( __FILE__ ) . '/../data/multi_relation_test_person.php';
+
 /**
  * Tests the code manager.
  *
